Closed Bug 1670943 Opened 5 years ago Closed 5 years ago

Black and White printing support for macOS

Categories

(Core :: Printing: Setup, defect, P1)

defect

Tracking

()

RESOLVED FIXED
84 Branch
Tracking Status
firefox83 --- fixed
firefox84 --- fixed

People

(Reporter: jwatt, Assigned: emilio)

References

Details

(Whiteboard: [print2020_v83][old-ui-])

Attachments

(2 files)

One of the big missing features in the new printing UI on macOS is Black and White printing. The current printing dialog has a "Black & White" checkbox, but in the new UI the "Color mode" dropdown in locked to "Color". I expect this will be a major source of annoyance for users on macOS if we push the new UI out in its current state.

Emilio, is there any chance you would be able to try to add the hacky code we discussed before on Matrix? I know you're not super enthusiastic about it, but if we're going to try to ship in v83 I think we need this. :-/

Flags: needinfo?(emilio)

Ok, I can try to. Unfortunately not until tomorrow because my dog literally ate my mac's charger this weekend lol (so one should arrive tomorrow).

This should probably wait for bug 1667053 anyways though, as this is going to just add a driver-specific thing to the print settings and such.

Depends on: 1667053
Assignee: nobody → emilio
Flags: needinfo?(emilio)
Status: NEW → ASSIGNED
Severity: -- → S3
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ca5de0f3b7b9 Remove two dead declarations in nsPrintSettingsX. r=jfkthame
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3c6ac25bb5d5 Add monochrome support for OSX. r=jwatt,jfkthame
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch

Comment on attachment 9181595 [details]
Bug 1670943 - Remove two dead declarations in nsPrintSettingsX. r=jfkthame

Beta/Release Uplift Approval Request

  • User impact if declined: Monochrome printing won't work on OSX.
  • Is this code covered by automated tests?: No
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: Print in monochrome from the new ui.
  • List of other uplifts needed: none
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Relatively simple, pref-gated change, has been baking in for a bit.
  • String changes made/needed: none
Attachment #9181595 - Flags: approval-mozilla-beta?
Attachment #9181585 - Flags: approval-mozilla-beta?
Flags: qe-verify+

Comment on attachment 9181595 [details]
Bug 1670943 - Remove two dead declarations in nsPrintSettingsX. r=jfkthame

P1, fix for an obvious bug in our new print UI on macOS, approved for 83 beta 8, thanks.

Attachment #9181595 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9181585 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triaged]

The option for Black and White print is available and can be selected on Firefox 84.0b4 and 85.0a1 (2020-11-23) but it won't work as it is affected by Bug 1676191 which is affecting our available color printer, and so we are not able to verify it completely

Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: