Bug 1670943 - Remove two dead declarations in nsPrintSettingsX. r=jfkthame, a=pascal

While at it.

Differential Revision: https://phabricator.services.mozilla.com/D93535